--- a/dev/encoder/CMakeLists.txt
+++ b/dev/encoder/CMakeLists.txt
@@ -11,6 +11,8 @@ target_sources(pio_rotary_encoder PRIVATE pio_rotary_encoder.cpp)
 target_link_libraries(pio_rotary_encoder PRIVATE
         pico_stdlib
         hardware_pio
+        multicore
+        pico_multicore
         )
 
 pico_generate_pio_header(pio_rotary_encoder ${CMAKE_CURRENT_LIST_DIR}/pio_rotary_encoder.pio)
