--- a/dev/i2c-comms/CMakeLists.txt
+++ b/dev/i2c-comms/CMakeLists.txt
@@ -34,7 +34,10 @@ pico_enable_stdio_usb(pico_i2c 1)
 
 # Add the standard library to the build
 target_link_libraries(pico_i2c
-        pico_stdlib)
+        pico_stdlib
+        pico_i2c_slave
+        hardware_i2c
+        )
 
 # Add the standard include files to the build
 target_include_directories(pico_i2c PRIVATE
