encoder works, abstracted behind a factory
Co-authored-by: inkyant <inkyant@users.noreply.github.com>

--- a/dev/encoder/CMakeLists.txt
+++ b/dev/encoder/CMakeLists.txt
@@ -4,6 +4,8 @@ project(quadrature_encoder VERSION 1.0.0)
 
 add_executable(quadrature_encoder quadrature_encoder.cpp)
 
+set(PICO_CXX_ENABLE_EXCEPTIONS 1)
+
 pico_sdk_init()
 
 target_sources(quadrature_encoder PRIVATE quadrature_encoder.cpp)
